outputs/tsp_constructive-constructive/2025-09-19_23-18-06/evaluations/problem_eval-9128509461329858748_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance scores** (based on degree centrality, betweenness, and clustering coefficients) and **path diversity**, while using a **nonlinear cooling schedule** to dynamically adjust exploration/exploitation balance, prioritizing high-importance nodes early and optimizing for diversity as the search progresses.}
                                                                                                                                                                                                                                                                                                                           ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance scores** (based on degree centrality, betweenness, and clustering coefficients) and **path diversity**, while using a **nonlinear cooling schedule** to dynamically adjust exploration/exploitation balance, prioritizing high-importance nodes early and optimizing for diversity as the search progresses.}
                                                                                                                                                                                                                                                                                                                           ^
SyntaxError: unmatched '}'
